--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,3 +13,19 @@ body{
     background-color: var(--body-color);
     font-family: var(--main-font);
 }
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    list-style: none;
+    text-decoration: none;   
+}
+
+section{
+    margin-top: 200px;
+}
+
+.container{
+    max-width: 1500px;
+}
