--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,31 +1,227 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&family=Raleway:wght@500;700&display=swap');
 
-:root{
-    --main-color : #1F4590;
-    --second-color : #FFA451;
-    --body-color : #D0FCFF;
+:root {
+    --main-color: #1F4590;
+    --second-color: #FFA451;
+    --body-color: #D0FCFF;
 
-    --main-font : 'Open Sans', sans-serif;
-    --heading-font : 'Raleway', sans-serif;
+    --main-font: 'Open Sans', sans-serif;
+    --heading-font: 'Raleway', sans-serif;
 }
 
-body{
+body {
     background-color: var(--body-color);
     font-family: var(--main-font);
 }
 
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     list-style: none;
-    text-decoration: none;   
+    text-decoration: none;
 }
 
-section{
+section {
     margin-top: 200px;
 }
 
-.container{
+.container {
     max-width: 1500px;
+}
+
+.navbar .nav-wrapper {
+    position: relative;
+    margin: auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 150px;
+}
+
+.nav-wrapper .logo {
+    font-size: 45px;
+    font-family: var(--heading-font);
+    font-weight: 600;
+    color: var(--main-color);
+}
+
+.nav-wrapper .logo span {
+    font-size: 30px;
+    color: var(--second-color);
+}
+
+.nav-wrapper .menu-wrapper {
+    display: flex;
+    align-items: center;
+    gap: 50px;
+}
+
+.nav-wrapper .menu-toggle {
+    display: none;
+}
+
+.nav-wrapper .menu-wrapper .menu {
+    display: flex;
+    gap: 70px;
+    align-items: center;
+}
+
+.menu-wrapper .menu .menu-link {
+    font-size: 20px;
+    font-weight: 500;
+    color: var(--main-color);
+    font-family: var(--heading-font);
+}
+
+.menu-wrapper .menu .menu-link.active {
+    font-weight: 700;
+    color: var(--second-color);
+}
+
+.menu-wrapper .btn-member {
+    border-radius: 60px;
+    width: 166px;
+    height: 71px;
+    background-color: var(--second-color);
+    text-align: center;
+    padding: 25px;
+    font-size: 18px;
+    color: white;
+    font-weight: 700px;
+}
+
+/* Home Start */
+
+.home {
+    margin-top: -110px;
+}
+
+.home .home-wrapper {
+    margin: auto;
+    display: flex;
+    justify-content: space-between;
+}
+
+.home .content-left {
+    width: 700px;
+}
+
+.home-wrapper .heading {
+    font-family: var(--heading-font);
+    font-size: 55px;
+    font-weight: 700;
+    color: var(--main-color);
+}
+
+.home-wrapper .heading span {
+    color: var(--second-color);
+    font-size: 40px;
+}
+
+.home-wrapper .subheading {
+    font-family: var(--main-font);
+    font-size: 18px;
+    font-weight: 400;
+    color: rgba(74, 74, 74, 0.70);
+    width: 456px;
+    margin-top: 25px;
+}
+
+.home-wrapper .box-wrapper {
+    display: flex;
+    margin-top: 25px;
+}
+
+.home-wrapper .box-wrapper .box {
+    display: flex;
+    align-items: center;
+    color: var(--main-color);
+    font-family: var(--heading-font);
+    font-size: 18px;
+    margin-right: 81px;
+    font-weight: 700;
+}
+
+.box-wrapper .box i {
+    margin-right: 10px;
+    width: 20px;
+    height: 20px;
+}
+
+@media screen and (max-width: 991px) {
+    .navbar .nav-wrapper {
+        padding: 0 30px;
+    }
+
+    .nav-wrapper .menu-wrapper .menu {
+        gap: 50px;
+    }
+
+    .menu-wrapper .menu .menu-link {
+        font-size: 16px;
+    }
+
+    .menu-wrapper .btn-member {
+        border-radius: 60px;
+        width: 140px;
+        height: 60px;
+        background-color: var(--second-color);
+        padding: 15px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 16px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .nav-wrapper .menu-wrapper {
+        position: absolute;
+        top: 100%;
+        left: 50%;
+        transform: translateX(-50%);
+        width: 80%;
+        display: block;
+        text-align: center;
+        padding-bottom: 15px;
+        background-color: var(--main-color);
+        border-radius: 10px;
+        transition: .5s ease-in-out;
+        clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
+    }
+
+    .nav-wrapper .menu-wrapper.active {
+        clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+        transition: .5s ease-in-out;
+    }
+
+    .nav-wrapper .menu-toggle {
+        display: initial;
+        font-size: 50px;
+        color: var(--main-color);
+        transition: .5s;
+    }
+
+    .menu-toggle.bx-x {
+        transition: .5s;
+        transform: rotate(360deg);
+    }
+
+    .nav-wrapper .menu-wrapper .menu {
+        display: block;
+    }
+
+    .menu-wrapper .btn-member {
+        margin: auto;
+    }
+
+    .menu-wrapper .menu .menu-item {
+        margin: 20px;
+    }
+
+    .menu .menu-item .menu-link {
+        color: white;
+    }
+
 }
